# fenics-examples

parabolic/: CMakeCache.txt  CMakeLists.txt  Error.h  Makefile  Parabolic.cpp  Parabolic.h  Parabolic.ufl  Solution.pvd  Solution000000.vtu  Solution000001.vtu  Solution000002.vtu  Solution000003.vtu  Solution000004.vtu  Solution000005.vtu  Solution000006.vtu  Solution000007.vtu  Solution000008.vtu  Solution000009.vtu  Solution000010.vtu  cmake_install.cmake  demo_parabolic  main.cpp
poisson/: CMakeCache.txt  CMakeLists.txt  Error.cpp  Makefile  Poisson.cpp  Poisson.h  Poisson.ufl  Solution000000.vtu  cmake_install.cmake  demo_poisson  main.cpp
poisson_non_linear/: CMakeCache.txt  Error.ufl  Makefile  Poisson.cpp  Poisson.h  Poisson.ufl  Solution000000.vtu  cmake_install.cmake  demo_poisson  main.cpp
